--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 body {
     background-color: rgb(0, 0, 0);
+    
 }
 
-.titulo {
+.fonte {
+    font-family: 'Sedgwick Ave Display', cursive;font-family: 'Sedgwick Ave Display', cursive;
     color: red;
+}
+
+.cabecalho {
     text-align: center;
-    font-family: 'Sedgwick Ave Display', cursive;
 }
 
 #imagem {
     width: 150px;
 }
 
-.historia {
-   
+.texto {
+    color: red;
     margin-right: 350px;
     width: 500px, 500px,500px,500px;
     height: 500px, 500px,500px,500px;
-}
-
-.texto {
-    color: red;
 }
